# cookiecutter-fastapi-meilisearch

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: testing.yaml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  gunicorn_conf.py  pyproject.toml  start-reload.sh  start.sh  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: testing.yaml
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/api/api_v1/: api.py
{{cookiecutter.project_slug}}/tests/: conftest.py
